--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </div>
 
   <div>
- <img src="horizon.jpg" alt="describe the image HERE for accessibility purposes" class="none" style="max-width:100%;">
+ <img src="horizon2.jpg" alt="describe the image HERE for accessibility purposes" class="center-img" style="max-width:60%;">
     </div>
 
     <div id="logo">
